--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/ce1f777886.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Salut</title>
 </head>
@@ -12,6 +13,7 @@
     <div id="main" ></div>
 
     <script src="./js/dependencies/jQuery.js"></script>
+    <script src="./js/dependencies/jQueryUI.js"></script>
     <script type="module" src="./js/app.js"></script>
 </body>
 </html>
