--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <script src="./js/dependencies/jQuery.js"></script>
     <script src="./js/dependencies/jQueryUI.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="module" src="./js/app.js"></script>
 </body>
 </html>
