--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/ce1f777886.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Redressed&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Salut</title>
 </head>
+
 <body>
-    
-    <div id="main" ></div>
+
+    <div id="main"></div>
+
+    <!-- <form method="POST" id="AddUser">
+        <input type="text" name="fName" placeholder="First Name">
+        <input type="text" name="lName" placeholder="Last Name">
+        <input type="text" name="userName" placeholder="Username">
+        <input type="text" name="PIN" placeholder="Enter a password" maxlength="4" minlength="4">
+        <select name="role" id="role" aria-placeholder="YUYU">
+            <option value="" disabled>Choose a role</option>
+            <option value="Manager">Manager</option>
+            <option value="Vendeur">Vendeur</option>
+        </select>
+    </form> -->
+    <!-- <input type="submit" value="Add an employee "> -->
 
     <script src="./js/dependencies/jQuery.js"></script>
     <script src="./js/dependencies/jQueryUI.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="./js/dependencies/fancyTable.js"></script>
     <script type="module" src="./js/app.js"></script>
 </body>
+
 </html>
-
-
