--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script src="https://kit.fontawesome.com/ce1f777886.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Redressed&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&family=Roboto+Condensed:wght@700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Salut</title>
 </head>
@@ -36,6 +37,7 @@
     <script src="./js/dependencies/jQueryUI.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./js/dependencies/fancyTable.js"></script>
+    <script src="./js/dependencies/bstable.js"></script>
     <script type="module" src="./js/app.js"></script>
 </body>
 
